--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
     "postgrator-cli": "^3.1.0",
-    "supertest": "^3.3.0"
+    "supertest": "^3.3.0",
+    "xss": "^1.0.6"
   }
 }
